# PPDAE

./: .gitignore  README.md  Untitled Diagram.drawio  ae_main.py  ae_main_phy.py  forward_main.py  pyproject.toml  requirements.txt  setup.cfg  sweep_hyperparams.yaml  sweep_hyperparams_small.yaml  sweep_latent_dim.yaml  torch16_jorge.yml  tox.ini  vae_main.py  vae_main_phy.py
bkps/: ae_main.py  dataset.py
notebooks/: ML_PPDAE_experiments_Aug12_2023.ipynb  data_exploration.ipynb  download_from_drive.ipynb  dual_AE_regressor.ipynb  explore_colormaps.ipynb  generate_ML_imgs_regression_December.ipynb  image_generation.ipynb  image_generation_newparams-Copy1.ipynb  latent_explorer.ipynb  parallel_coord_plot.ipynb  run_in_colab.ipynb
ppdae/: ae_model_phy.py  ae_training_phy.py  dataset_large.py  utils.py  vae_model_phy.py  vae_training_phy.py
ppdae/scripts/: ae_main.py  fit_parameters_to_latentspace.py  setup_training.py  vae_main.py
src/: ae_forward_trainer_phy.py  ae_model.py  ae_model_phy.py  ae_training.py  ae_training_phy.py  dataset.py  dataset_.py  dataset_large.py  training_callbacks.py  utils.py  vae_model_phy.py  vae_training_phy.py
src/.ipynb_checkpoints/: utils-checkpoint.py
